# project_noveldownloader

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  DISCLAIMER.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  rule_request.md
.github/workflows/: ci.yml
docs/: index.md  mkdocs.yml
docs/adr/: 0001-architecture-and-deps.md
docs/developer/: README.md
docs/rule-authoring/: README.md
docs/superpowers/: SESSION-STATE.md
docs/superpowers/plans/: 2026-04-20-ndl-p0-scaffold.md  2026-04-29-ndl-p1-mvp.md  2026-04-30-ndl-p2-library.md  2026-05-01-ndl-p3-web-ui.md  2026-05-01-ndl-p4-update-scheduling.md  2026-05-01-ndl-p5-search-rules.md
docs/superpowers/specs/: 2026-04-20-ndl-design.md
docs/user-guide/: README.md
src/ndl/: __init__.py  __main__.py
src/ndl/application/: __init__.py  container.py  paths.py
src/ndl/application/services/: __init__.py  _progress.py  convert.py  download.py  library.py  update.py
src/ndl/builtin_rules/: __init__.py  example_static.yaml
src/ndl/cli/: __init__.py  disclaimer.py  main.py  renderers.py
src/ndl/converters/: __init__.py  epub_writer.py  registry.py  txt_writer.py
src/ndl/core/: __init__.py  errors.py  models.py  progress.py  protocols.py
src/ndl/fetchers/: __init__.py  _robots.py  _throttle.py  http.py
src/ndl/parsers/: __init__.py  _common.py  html_chapter.py  html_index.py  txt_reader.py
src/ndl/rules/: __init__.py  loader.py  resolver.py  schema.py  selector.py
src/ndl/scheduler/: __init__.py  update_job.py
src/ndl/storage/: __init__.py  database.py  models.py  repository.py
src/ndl/web/: __init__.py  app.py  jobs.py
src/ndl/web/static/css/: app.css
src/ndl/web/static/js/: app.js
src/ndl/web/templates/: base.html  download_job.html  error.html  index.html  library_detail.html  update_results.html
tests/: __init__.py  conftest.py
tests/contract/: test_builtin_rules.py
tests/contract/fixtures/example_static/: chapter.html  expected.json  index.html
tests/unit/: __init__.py
tests/unit/application/: test_container.py  test_paths.py
tests/unit/application/services/: __init__.py  test_convert.py  test_download.py  test_library.py  test_update.py
tests/unit/cli/: test_main.py
tests/unit/converters/: __init__.py  test_epub_writer.py  test_registry.py  test_txt_writer.py
tests/unit/core/: test_errors.py  test_models.py
tests/unit/fetchers/: test_http.py  test_robots.py  test_throttle.py
tests/unit/parsers/: test_html_chapter.py  test_html_index.py  test_txt_reader.py
tests/unit/rules/: test_loader_resolver.py  test_schema.py  test_selector.py
tests/unit/scheduler/: __init__.py  test_update_job.py
tests/unit/storage/: test_database.py  test_repository.py
tests/unit/web/: __init__.py  test_app.py
