[project]
name = "ndl"
version = "0.1.0.dev0"
description = "NOVELDOWNLOADER: rule-driven Chinese novel downloader and format converter"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "makunxiang-cmd" }]
requires-python = ">=3.10"
keywords = ["novel", "downloader", "chinese", "epub", "crawler"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Text Processing :: Markup",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
  "pydantic>=2.13.3",
  "pyyaml>=6.0.3",
  "selectolax>=0.4.7",
  "httpx>=0.27",
  "ebooklib>=0.20",
  "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.8",
  "pre-commit>=3.6",
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-cov>=4.1",
  "respx>=0.21",
  "ruff>=0.3",
  "types-pyyaml>=6.0.12.20260408",
]
docs = [
  "mkdocs>=1.5",
  "mkdocs-material>=9.5",
]

[project.scripts]
ndl = "ndl.cli.main:app"

[project.urls]
Homepage = "https://github.com/makunxiang-cmd/project_noveldownloader"
Repository = "https://github.com/makunxiang-cmd/project_noveldownloader"
Issues = "https://github.com/makunxiang-cmd/project_noveldownloader/issues"
Changelog = "https://github.com/makunxiang-cmd/project_noveldownloader/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ndl"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "B",
  "C4",
  "E",
  "F",
  "I",
  "N",
  "RUF",
  "SIM",
  "UP",
  "W",
]
ignore = [
  "E501",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_return_any = true
show_error_codes = true
files = ["src/ndl"]

[[tool.mypy.overrides]]
module = ["ebooklib"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--import-mode=importlib",
]
asyncio_mode = "auto"
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["src/ndl"]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "\\.\\.\\.",
]
fail_under = 80
